@@ -1,5 +1,11 @@
 2008-11-01 Josh Kropf <josh@slashdev.ca>
 
+    * EntryPointType.java, JdpType.java: applied patch by jwall1701 to support
+      using resource bundles for entry point titles
+
+
+2008-11-01 Josh Kropf <josh@slashdev.ca>
+
     * RapcTask.java
       (Define.if, Define.unless): added attributes to conditionally define
       preprocessor tags added as nested elements of rapc task
